fixed z-indexing, styling, labels

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -2,14 +2,17 @@
 * {
   user-select: none;
   -webkit-user-select: none;
+  font-family: 'Roboto', sans-serif;
 }
+
 html,body{
     padding:0;
     margin: 0;
-    font-family:arial;
+    font-family: 'Roboto', sans-serif;
     font-size:12px;
     font-weight:normal;
     color:black;
+    height: 100%;
 }
 h1, h2, h3, h4, h5, h6{
     padding: 0;
@@ -19,14 +22,12 @@ h1, h2, h3, h4, h5, h6{
 /*app root container*/
 .UIRoot {
     display: block;
-    position: absolute;
-    top: calc(50% - 150px);
-    left: 20%;
-    width: 60%;
-    height: 300px;
+    position: relative;
+    width: 100%;
+    height: 100%;
     background-color: rgba(255,0,0,0.1);
-    padding: 10px;
-    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 /*
@@ -37,7 +38,6 @@ h1, h2, h3, h4, h5, h6{
     display:inline-block;
     float: left;
     width: 100%;
-    height: 36px;
     background-color: rgba(255, 0, 0, 0.1);
 }
 .UIRoot .head h1{
@@ -45,43 +45,43 @@ h1, h2, h3, h4, h5, h6{
     float:left;
     width: 100%;
     text-align: center;
-    font-size:20px;
-    line-height: 36px;
-    background-color: rgba(0, 255, 0, 0.1);
+    font-size:36px;
+    color: #a72525;
+    padding: 10px 0 10px 0;
+    box-sizing: border-box;
+    letter-spacing: 2px;
 }
 
 
 /* labels */
 .UIRoot .labels {
-    display:inline-block;
-    float: left;
-    width: 30%;
-    height: calc(100% - 36px);
-    background-color:rgba(0, 0, 255, 0.1);
-    padding: 10px;
-    box-sizing: border-box;
-    line-height: 150%;
-}
-.UIRoot .labels hr {
-    border:none;
+    position: absolute;
+    bottom: 0;
+    left: 0;
     width: 100%;
-    height: 1px;
-    background: black;
+    background-color:rgba(0, 0, 255, 0.1);
+    line-height: 150%;
+    font-size: 1em
+}
+.UIRoot .labels .info {
+    display:inline-block;
+    float:left;
+    width: 100%;
+    padding: 5px 10px 5px 10px;
+    box-sizing: border-box;
 }
 
 
 
 /* sliders */
 .UIRoot .sliders {
-    display:inline-block;
-    float: left;
-    position: relative;
-    height: 100%;
-    width: 70%;
-    height: calc(100% - 36px);
-    /*background-color:rgba(255, 0, 0, 0.1);*/
-    padding: 10px;
-    box-sizing: border-box;
+    position: absolute;
+    top:50%;
+    left: 50%;
+    margin:-150px 0 0 -150px;
+    width: 300px;
+    height: 300px;
+    background: rgba(255, 0, 0, 0.1);
 }
 .UIRoot .sliders h2{
     display:inline-block;
@@ -116,10 +116,10 @@ h1, h2, h3, h4, h5, h6{
     left:0;
     z-index: 11;
     transform: translate(-50%,-50%);
-    width: 20px;
-    height: 20px;
+    width: 24px;
+    height: 24px;
     border-radius: 50%;
-    background: blue;
+    background: #222;
     cursor: pointer;
     /*pointer-events: none*/
 }
@@ -156,7 +156,7 @@ h1, h2, h3, h4, h5, h6{
     left:0;
     width: 100%;
     height: 100%;
-    z-index: 10;
+    z-index: 9;
     pointer-events: none;
     /*background: rgba(255,0,0,0.5);*/
 }
